...
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/viewOwnListingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/button_shadow_margin"
                    android:layout_marginBottom="@dimen/button_shadow_margin"
                    android:background="@drawable/rounded_corner_button_colored"
...
                android:maxLength="17"
                android:hint="@string/phone_number"
                android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/inter_space_large"
                android:background="@drawable/rounded_corner_button_colored"
                android:textColor="@color/white"
...
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginTop="@dimen/inter_space_large"
                android:layout_marginEnd="@dimen/inter_space_large"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/inter_space_small"
                    android:background="@drawable/boxed"
                    android:hint="@string/current_password"
                    android:importantForAutofill="no"
...
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginTop="@dimen/inter_space_small"
                android:layout_marginEnd="@dimen/inter_space_large"
                app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_space_small"
                android:hint="@string/new_password"
                android:background="@drawable/boxed"
                android:inputType="textPassword"
...
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginTop="@dimen/inter_space_small"
                android:layout_marginEnd="@dimen/inter_space_large"
                app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_space_small"
                android:hint="@string/confirm_password"
                android:background="@drawable/boxed"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/savePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/inter_space_large"
                android:layout_marginBottom="@dimen/inter_space_extra_large"
                android:background="@drawable/rounded_corner_button_colored"
...
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.7"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/inter_space_extra_large"
                android:layout_marginBottom="@dimen/inter_space_large"
                android:background="@drawable/rounded_corner_button_colored"
...
