...
    <item
        android:id="@+id/action_messages"
        android:enabled="true"
        android:icon="@drawable/baseline_chat_black_18dp"
        android:title="@string/bottom_navigation_messages" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/baseline_person_black_18dp"
        android:title="@string/bottom_navigation_profile" />
</menu>
