...
            android:background="@drawable/rounded_corner_button_colored"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/inter_space_large"
            android:background="@drawable/rounded_corner_button_colored"
            android:text="@string/sign_up"
...
