...
    <string name="latest_items"><b>Latest items</b></string>
    <string name="select_category">Select a category</string>
    <string name="select_filter">Filter</string>
    <string name="filter">Filter</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">You don\'t have any saved favorites</string>
    <string name="no_created_listings">You haven\'t created any listing</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">Permission Denied</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Permission Rationale Location</string>
    <string name="my_location">Find my location</string>
    <string name="add_MP">Define A Meeting Point</string>
...
